# skalp_workspace

ros_podstawy_2/: CMakeLists.txt  package.xml
ros_podstawy_2/launch/: 2nodesexample.launch  example.launch  exercise2.launch  namespace.launch
ros_podstawy_2/msg/: skalp.msg
ros_podstawy_2/script/: exercise1.py  listener.py  listener_msg.py  talker.py  talker_msg.py
